--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+  color-scheme: light dark;
+  accent-color: #F2994A;
+}
+
 *, *::after, *::before {
   box-sizing: border-box;
 }
@@ -9,27 +14,46 @@
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
+  color: #4F4F4F;
+  font-size: 14px;
+  margin-left: min(1rem, 100%);
+  margin-right: min(1rem, 100%);
 }
 
 h1 {
   font-size: 24px;
   line-height: 29px;
+  color: #4E5150;
+  padding-block: 1rem;
 }
 
 h2 {
   font-size: 14px;
   line-height: 17px;
+  margin-top: 2rem;
+}
+
+p.total {
+  color: #333;
+  display: inline;
+}
+
+p.price-right {
+  float: right;
 }
 
 p.item-title {
   font-size: 12px;
   line-height: 15px;
+  padding-bottom: .5rem;
 }
 
 p.item-price {
   font-size: 14px;
   line-height: 17px;
   color: #F2994A;
+  display: inline;
+  padding-right: 10px;
 }
 
 p.item-old-price {
@@ -37,6 +61,77 @@ p.item-old-price {
   line-height: 12px;
   text-decoration-line: line-through;
   color: #4E5150;
+  display: inline;
+}
+
+label {
+  font-size: 10px;
+  line-height: 12px;
+  display: block;
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+}
+
+input {
+  border: solid 1px #828282;
+  border-radius: 12px;
+  width: 100%;
+  height: 40px;
+}
+
+select {
+  font-weight: 600;
+  font-size: 12px;
+  color: #828282;
+  height: 40px;
+  border-radius: 12px;
+}
+
+option {
+  font-size: .9rem;
+}
+
+::placeholder {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.last-input {
+  display: flex;
+  gap: 24px;
+}
+
+.checkbox {
+  width: auto;
+  height: auto;
+}
+
+.fontawesome {
+  font-family: 'Font Awesome 5 Free', 'Montserrat', sans-serif !important;
+  font-weight: 700;
+  padding-inline: 10px;
+}
+
+button {
+  background: #F2994A;
+  border-radius: 12px;
+  border: none;
+  width: 166px;
+  height: 54px;
+  font-family: 'Montserrat', sans-serif;
+  color: #fff;
+  font-size: 1rem;
+  margin-bottom: 3rem;
+}
+
+.button-box {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.save-box {
+  padding-block: 1rem;
 }
 
 a {
@@ -45,37 +140,85 @@ a {
 
 img {
   border-radius: 13px;
-  width: 135px;
-  height: 135px;
+  width: 125px;
+  height: 125px;
 }
 
-.footer-info {
-  margin-top: 2rem;
+hr.solid {
+  border: 0;
+  border-top: 1px solid #BDBDBD;
+  width: 100%;
+  margin-block: .5rem;
+}
+
+p.save {
+  font-size: 10px;
+  display: inline;
+  padding-left: 6px;
+}
+
+header {
+  padding-top: 1rem;
+}
+
+aside {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  background-color: #f2f2f2;
+  border-radius: 12px;
+  padding: 1rem;
+  gap: 1.5rem;
+}
+
+.item-box {
+  display: flex;
+}
+
+.price-box {
+  padding-inline: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.checkout-box {
+  padding-top: 2rem;
+}
+
+
+.quantity-box {
+  width: 120px;
+  display: flex;
+  border: 1px solid #828282;
+  border-radius: 12px;
+  padding-block: .8rem;
+  justify-content: space-evenly;
 }
 
 form {
-  width: 300px;
+  width: 100%;
   margin: 0 auto;
-  text-align: center;
-  padding-top: 50px;
 }
 
 .value-button {
-  display: inline-block;
-  border: 1px solid #ddd;
-  margin: 0px;
-  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #E0E0E0;
+  border: none;
+  border-radius: 4px;
+  width: 20px;
   height: 20px;
-  text-align: center;
-  vertical-align: middle;
-  padding: 11px 0;
-  background: #eee;
-  -webkit-touch-callout: none;
+  padding: 0;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  color: #828282;
+  font-size: 1.5rem;
+  font-weight: 400;
 }
 
 .value-button:hover {
@@ -83,12 +226,10 @@ form {
 }
 
 form #decrease {
-  margin-right: -4px;
   border-radius: 8px 0 0 8px;
 }
 
 form #increase {
-  margin-left: -4px;
   border-radius: 0 8px 8px 0;
 }
 
@@ -98,13 +239,15 @@ form #input-wrap {
 }
 
 input#number {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 1rem;
   text-align: center;
   border: none;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
   margin: 0px;
-  width: 40px;
-  height: 40px;
+  width: 20px;
+  height: 20px;
+  background-color: #f2f2f2;
 }
 
 input[type=number]::-webkit-inner-spin-button,
@@ -113,6 +256,16 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
 }
 
-@media screen and (min-width: 660px) {
-
+input[type=number] {
+  -moz-appearance: textfield;
 }
+
+.footer-info {
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  line-height: 17px;
+  color: #BDBDBD;
+  margin-block: 2rem;
+}
+
