--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 :root {
-  color-scheme: light dark;
   accent-color: #F2994A;
 }
 
@@ -103,10 +102,9 @@ option {
 
 .last-input {
   display: flex;
-  flex-wrap: wrap;
-  column-gap: 20px;
-}
 
+  column-gap: 1rem;
+}
 
 .checkbox {
   width: auto;
@@ -211,7 +209,7 @@ aside {
 }
 
 .last-input > div {
-  width: auto;
+  width: 50%;
 }
 
 form {
@@ -346,7 +344,10 @@ input[type=number] {
 }
 
 @media screen and (min-width: 660px) and (max-width: 850px) {
-.last-input > div {
-  width: 100%;
-}
-}
+  .last-input {
+    flex-wrap: wrap;
+  }
+  .last-input > div {
+    width: 100%;
+  }
+  }
